feat: offline-first UX + EXIF orientation
- Remove Google Fonts dependency\n- Add dismissible in-app error banner + better keyboard a11y\n- Auto-orient images via EXIF; tighten request normalization and upload reads\n

--- a/static/index.html
+++ b/static/index.html
@@ -3,13 +3,8 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta name="color-scheme" content="dark light" />
     <title>AI Headshot Studio</title>
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Space+Grotesk:wght@400;500;600;700&display=swap"
-      rel="stylesheet"
-    />
     <link rel="stylesheet" href="/static/styles.css" />
   </head>
   <body>
@@ -22,7 +17,7 @@
 
     <main class="studio">
       <section class="panel panel--controls">
-        <div class="card card--drop" id="dropzone">
+        <div class="card card--drop" id="dropzone" role="button" tabindex="0" aria-label="Upload photo">
           <input id="fileInput" type="file" accept="image/*" />
           <div class="drop__text">
             <span>Drop a photo</span>
@@ -110,7 +105,13 @@
             <button id="processBtn" class="btn">Process</button>
             <button id="downloadBtn" class="btn btn--ghost" disabled>Download</button>
           </div>
-          <small class="hint">Shortcut: Ctrl + Enter to process</small>
+          <div id="toast" class="toast" role="alert" aria-live="assertive" hidden>
+            <div id="toastMessage" class="toast__message"></div>
+            <button id="toastDismiss" class="toast__dismiss" type="button" aria-label="Dismiss message">
+              Dismiss
+            </button>
+          </div>
+          <small class="hint">Shortcut: Ctrl / ⌘ + Enter to process</small>
         </div>
       </section>
 
