--- a/static/index.html
+++ b/static/index.html
@@ -55,7 +55,10 @@
         </div>
 
         <div class="card">
-          <div class="card__title">Lighting + retouch</div>
+          <div class="card__title-row">
+            <div class="card__title">Lighting + retouch</div>
+            <button id="resetSliders" class="btn btn--ghost btn--small" type="button">Reset</button>
+          </div>
           <div class="slider-row">
             <label for="brightness">Brightness <span id="brightnessValue">1.00</span></label>
             <input id="brightness" type="range" min="0.5" max="1.5" step="0.01" value="1" />
