feat: persist studio settings
- Save UI settings to localStorage (style/sliders/background/crop/format)\n- Add Reset studio button to return to defaults\n

--- a/static/index.html
+++ b/static/index.html
@@ -82,7 +82,10 @@
         </div>
 
         <div class="card">
-          <div class="card__title">Crop + export</div>
+          <div class="card__title-row">
+            <div class="card__title">Crop + export</div>
+            <button id="resetStudio" class="btn btn--ghost btn--small" type="button">Reset studio</button>
+          </div>
           <div class="select-row">
             <label for="preset">Crop preset</label>
             <select id="preset"></select>
