--- a/static/index.html
+++ b/static/index.html
@@ -127,10 +127,12 @@
           <div class="preview-grid">
             <div class="preview">
               <span>Original</span>
+              <div id="originalMeta" class="preview__meta"></div>
               <img id="originalPreview" alt="Original preview" />
             </div>
             <div class="preview">
               <span>Processed</span>
+              <div id="processedMeta" class="preview__meta"></div>
               <div class="preview__frame">
                 <img id="processedPreview" alt="Processed preview" />
                 <div id="loading" class="loading">Processing…</div>
