feat: cancel processing + validate files
- Add Cancel button to abort in-flight processing requests\n- Validate file type and 12MB size in the browser\n- Update docs/release notes\n

--- a/static/index.html
+++ b/static/index.html
@@ -110,6 +110,7 @@
           <div class="action-row">
             <button id="processBtn" class="btn">Process</button>
             <button id="downloadBtn" class="btn btn--ghost" disabled>Download</button>
+            <button id="cancelBtn" class="btn btn--ghost" type="button" hidden>Cancel</button>
           </div>
           <div id="toast" class="toast" role="alert" aria-live="assertive" hidden>
             <div id="toastMessage" class="toast__message"></div>
