feat: add headroom control
- Add top_bias param to /api/process and apply in cropping\n- Add Headroom slider to UI with local persistence\n- Add tests for top-bias behavior\n

--- a/static/index.html
+++ b/static/index.html
@@ -90,6 +90,10 @@
             <label for="preset">Crop preset</label>
             <select id="preset"></select>
           </div>
+          <div class="slider-row">
+            <label for="topBias">Headroom <span id="topBiasValue">0.20</span></label>
+            <input id="topBias" type="range" min="0" max="1" step="0.01" value="0.2" />
+          </div>
           <div class="select-row">
             <label for="format">Format</label>
             <select id="format">
