feat: background swatch preview
- Show backdrop color swatch beside selector\n- Handle transparent background with checker pattern\n- Update release notes\n

--- a/static/index.html
+++ b/static/index.html
@@ -44,13 +44,16 @@
           </div>
           <div class="select-row">
             <label for="background">Backdrop</label>
-            <select id="background">
-              <option value="white">Clean white</option>
-              <option value="light">Soft light</option>
-              <option value="blue">Studio blue</option>
-              <option value="gray">Neutral gray</option>
-              <option value="transparent">Transparent</option>
-            </select>
+            <div class="select-with-swatch">
+              <select id="background">
+                <option value="white">Clean white</option>
+                <option value="light">Soft light</option>
+                <option value="blue">Studio blue</option>
+                <option value="gray">Neutral gray</option>
+                <option value="transparent">Transparent</option>
+              </select>
+              <span id="backgroundSwatch" class="swatch" aria-hidden="true"></span>
+            </div>
           </div>
         </div>
 
