feat: jpeg quality control
- Add jpeg_quality parameter and clamp to 60–100\n- Add JPEG quality slider with persistence\n- Update docs and tests\n

--- a/static/index.html
+++ b/static/index.html
@@ -104,6 +104,10 @@
               <option value="jpeg">JPEG</option>
             </select>
           </div>
+          <div class="slider-row">
+            <label for="jpegQuality">JPEG quality <span id="jpegQualityValue">92</span></label>
+            <input id="jpegQuality" type="range" min="60" max="100" step="1" value="92" />
+          </div>
           <div class="toggle-row">
             <label class="switch">
               <input id="autoUpdate" type="checkbox" checked />
