feat: clipboard paste upload
- Allow pasting images to upload quickly\n- Update help text and release notes\n

--- a/static/index.html
+++ b/static/index.html
@@ -21,7 +21,7 @@
           <input id="fileInput" type="file" accept="image/*" />
           <div class="drop__text">
             <span>Drop a photo</span>
-            <small>or click to upload (max 12MB)</small>
+            <small>or click/paste to upload (max 12MB)</small>
           </div>
         </div>
 
