feat: background reset
- Add one-click background reset button\n- Update release notes\n

--- a/static/index.html
+++ b/static/index.html
@@ -31,7 +31,10 @@
         </div>
 
         <div class="card">
-          <div class="card__title">Background</div>
+          <div class="card__title-row">
+            <div class="card__title">Background</div>
+            <button id="resetBackground" class="btn btn--ghost btn--small" type="button">Reset</button>
+          </div>
           <div class="toggle-row">
             <label class="switch">
               <input id="removeBg" type="checkbox" />
