--- a/static/index.html
+++ b/static/index.html
@@ -90,7 +90,12 @@
         <div class="card">
           <div class="card__title-row">
             <div class="card__title">Crop + export</div>
-            <button id="resetStudio" class="btn btn--ghost btn--small" type="button">Reset studio</button>
+            <div class="button-group">
+              <button id="resetCropExport" class="btn btn--ghost btn--small" type="button">
+                Reset crop
+              </button>
+              <button id="resetStudio" class="btn btn--ghost btn--small" type="button">Reset studio</button>
+            </div>
           </div>
           <div class="select-row">
             <label for="preset">Crop preset</label>
