feat: recent export history
- Show last 3 exports with quick download buttons\n- Record size/format/time metadata\n- Update release notes\n

--- a/static/index.html
+++ b/static/index.html
@@ -178,6 +178,13 @@
           </div>
         </div>
 
+        <div class="card">
+          <div class="card__title">Recent exports</div>
+          <div id="historyList" class="history-list">
+            <div class="history-empty">No exports yet.</div>
+          </div>
+        </div>
+
         <div class="card tips">
           <div class="card__title">Studio tips</div>
           <ul>
