docs: add concise project description

--- a/static/index.html
+++ b/static/index.html
@@ -4,6 +4,10 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="color-scheme" content="dark light" />
+    <meta
+      name="description"
+      content="Local-first headshot enhancement studio for background removal, retouching, and headshot framing."
+    />
     <title>AI Headshot Studio</title>
     <link rel="stylesheet" href="/static/styles.css" />
   </head>
