feat(ui): surface batch limits + succeeded/failed counts

--- a/static/index.html
+++ b/static/index.html
@@ -35,6 +35,7 @@
             <small id="batchCount" class="hint">0 selected</small>
           </div>
           <input id="batchInput" type="file" accept="image/*" multiple />
+          <small id="batchLimits" class="hint">Max 24 images, 72MB total.</small>
           <div class="select-row">
             <label for="batchFolder">ZIP folder</label>
             <input
