--- a/static/index.html
+++ b/static/index.html
@@ -157,8 +157,8 @@
             <select id="preset"></select>
           </div>
           <div class="slider-row">
-            <label for="topBias">Headroom <span id="topBiasValue">0.20</span></label>
-            <input id="topBias" type="range" min="0" max="1" step="0.01" value="0.2" />
+            <label for="topBias">Headroom <span id="topBiasValue">0.80</span></label>
+            <input id="topBias" class="range range--rtl" type="range" min="0" max="1" step="0.01" value="0.2" />
           </div>
           <div class="select-row">
             <label for="format">Format</label>
