feat(framing): optional face-guided crop focus

--- a/static/index.html
+++ b/static/index.html
@@ -306,6 +306,10 @@
               <strong id="diagRembg">Unknown</strong>
             </div>
             <div class="diagnostics-row">
+              <span>Face framing</span>
+              <strong id="diagFace">Unknown</strong>
+            </div>
+            <div class="diagnostics-row">
               <span>Upload limit</span>
               <strong id="diagUploadLimit">--</strong>
             </div>
