feat(export): add WebP output support

--- a/static/index.html
+++ b/static/index.html
@@ -165,10 +165,11 @@
             <select id="format">
               <option value="png">PNG</option>
               <option value="jpeg">JPEG</option>
+              <option value="webp">WebP</option>
             </select>
           </div>
           <div class="slider-row">
-            <label for="jpegQuality">JPEG quality <span id="jpegQualityValue">92</span></label>
+            <label for="jpegQuality">Quality <span id="jpegQualityValue">92</span></label>
             <input id="jpegQuality" type="range" min="60" max="100" step="1" value="92" />
           </div>
           <div id="estimateMeta" class="estimate-meta" aria-live="polite">Estimated output: --</div>
