feat: add x, github, and us-visa one-click use cases

--- a/src/ai_headshot_studio/static/index.html
+++ b/src/ai_headshot_studio/static/index.html
@@ -73,9 +73,21 @@
               <div class="use-case-title">LinkedIn</div>
               <div class="use-case-sub">Square · Studio · JPEG</div>
             </button>
+            <button class="use-case-card" data-use-case="x-profile" type="button">
+              <div class="use-case-title">X Profile</div>
+              <div class="use-case-sub">400x400 · Square · JPEG</div>
+            </button>
+            <button class="use-case-card" data-use-case="github-avatar" type="button">
+              <div class="use-case-title">GitHub Avatar</div>
+              <div class="use-case-sub">800x800 · Square · PNG</div>
+            </button>
             <button class="use-case-card" data-use-case="resume" type="button">
               <div class="use-case-title">Resume</div>
               <div class="use-case-sub">4×5 · Clean · PNG</div>
+            </button>
+            <button class="use-case-card" data-use-case="us-visa-digital" type="button">
+              <div class="use-case-title">US Visa Digital</div>
+              <div class="use-case-sub">600x600 · White · JPEG</div>
             </button>
             <button class="use-case-card" data-use-case="passport" type="button">
               <div class="use-case-title">Passport</div>
