feat: add multi-mode framing guides for headshot and passport

--- a/src/ai_headshot_studio/static/index.html
+++ b/src/ai_headshot_studio/static/index.html
@@ -300,6 +300,8 @@
                     <div class="frame-guide__safe"></div>
                     <div class="frame-guide__head"></div>
                     <div class="frame-guide__shoulders"></div>
+                    <div class="frame-guide__passport-eyes"></div>
+                    <div class="frame-guide__passport-chin"></div>
                   </div>
                   <input
                     id="compareSlider"
@@ -379,7 +381,7 @@
           <li><strong>Ctrl/⌘ + Enter</strong> — Process image</li>
           <li><strong>Esc</strong> — Cancel processing / close dialogs</li>
           <li><strong>Paste</strong> — Paste an image from clipboard</li>
-          <li><strong>G</strong> — Toggle framing guide</li>
+          <li><strong>G</strong> — Cycle framing guides</li>
           <li><strong>Drag & drop</strong> — Drop a photo to upload</li>
         </ul>
       </div>
