feat: add use-case preflight checks in the control panel

--- a/src/ai_headshot_studio/static/index.html
+++ b/src/ai_headshot_studio/static/index.html
@@ -95,6 +95,9 @@
             </button>
           </div>
           <small class="hint">One click loads recommended settings.</small>
+          <div id="useCaseChecks" class="checks-list" aria-live="polite">
+            <div class="checks-empty">Select a use case to see preflight checks.</div>
+          </div>
         </div>
 
         <div class="card">
